# ETF

./: .dockerignore  .env.example  .gitignore  00_START_HERE.md  CONTRIBUTING.md  FINAL_STATUS.md  GIT_SETUP.md  INDEX.md  LICENSE  MANIFEST.in  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  UV_LOCK_EXPLAINED.md  UV_MIGRATION_COMPLETE.md  UV_QUICK_REFERENCE.md  app.py  pyproject.toml  requirements.txt  run.py  setup.bat  setup.py  setup.sh
.github/workflows/: python-app.yml
templates/: index.html
